--- a/views/login.jade
+++ b/views/login.jade
@@ -3,10 +3,13 @@ block contenido
 	h1 Bien venidos a login
 	form(action="/users",method="POST")
 		div(class="form-group")
-			label(for="email") Email
-			input(type="text",name="email",placeholder="Email", id="email",class="form-control")
+			label(for="email") Correo
+			input(type="text",name="email",placeholder="Correo", id="email",class="form-control")
 		div
-			label(for="password") Password
-			input(type="password",name="password",placeholder="Email", id="password",class="form-control")
+			label(for="password") Contraseña
+			input(type="password",name="password",placeholder="Correo", id="password",class="form-control")
+		div
+			label(for="password_confirmation") Confirma tu Contraseña
+			input(type="password",name="password_confirmation",placeholder="Correo", id="password_confirmation",class="form-control")
 		div
 		input(type="submit" value="Iniciar sesión" class="btn btn-info")
