Se agrego validacion personalizada para confirmar la contraseña

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
 extends ./layout.jade
 block contenido
 	h1 Bien venidos a index
-	a(href="/login") iniciar sesión
+	a(href="/registro") iniciar sesión
