--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,19 @@
 extends ./layout.jade
 block contenido
-	h1 Bien venidos a index
-	a(href="/registro") iniciar sesión
+		div(class="row")
+			div(class="col-md-4" style="position:absolute;left:34%;top:20%;")
+				div(class="panel panel-default")
+					div(class="panel-heading")
+						h3 Iniciar Sesión
+					div(class="panel-body")
+						form(action="/login",method="POST")
+							div(class="form-group")
+							div
+								label(for="username") Nombre de usuario
+								input(type="text",name="username",placeholder="Correo ó Nombre de Usuario", id="username",class="form-control")
+							div
+								label(for="password") Contraseña
+								input(type="password",name="password",placeholder="contraseña", id="password",class="form-control")
+								br
+								input(type="submit" value="Enviar" class="btn btn-info")
+								a(href="/registro" class="btn btn-default pull-right") Crear cuenta
