--- a/views/registro.jade
+++ b/views/registro.jade
@@ -6,7 +6,7 @@ block contenido
 					div(class="panel-heading")
 						h3 Registro
 					div(class="panel-body")
-						form(action="/users",method="POST")
+						form(action="/addusr",method="POST")
 							div(class="form-group")
 							div
 								label(for="username") Nombre de usuario
@@ -20,6 +20,6 @@ block contenido
 								label(for="password_confirmation") Confirma tu Contraseña
 								input(type="password",name="password_confirmation",placeholder="Correo", id="password_confirmation",class="form-control")
 								br
-								input(type="submit" value="Iniciar sesión" class="btn btn-info")
+								input(type="submit" value="Guardar" class="btn btn-info")
 			
 
